Removing groups endpoint from aggregator
